# planobricks

./: .databricks-resources.json  .gitignore  CLAUDE.md  PRD.md  README.md  databricks.yml  main.py  planogram.prd  pyproject.toml
.cursor/: mcp.json
notebooks/: 01_brand_identification.py
resources/: planobricks_app.yml
scripts/: email_to_shelf.py  test_local_app.py  test_shelf_inspector_panels.py  verify_dashboard.py  verify_shelf_inspector_crop.py
src/app/: app.py  app.yaml  backend.py  compliance_engine.py  grocery_data.py  planogram_engine.py  planogram_store.py  requirements.txt  store_images.py  store_manager.py
src/app/data/: enriched_products.csv  stores.json
src/app/data/store_images/: store-374619f2.json
src/planobricks/: __init__.py
tests/: test_init.py
