[project]
name = "planobricks"
version = "0.1.0"
description = "Plano Bricks - Databricks project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=4.0.0",
    "dash-bootstrap-components>=2.0.4",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".claude", ".cursor", ".ai-dev-kit"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/planobricks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
